style adn design

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'ReactNativeArIntegration' do
     :hermes_enabled => false
   )
 
+  pod 'RNDateTimePicker', :path => '../node_modules/@react-native-community/datetimepicker'
+
   target 'ReactNativeArIntegrationTests' do
     inherit! :complete
     # Pods for testing
