--- a/package.json
+++ b/package.json
@@ -10,18 +10,26 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
+    "@react-native-community/datetimepicker": "^3.4.7",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^1.15.0",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "jscodeshift": "^0.11.0",
     "react": "17.0.1",
+    "react-icons": "^4.2.0",
     "react-native": "0.64.0",
     "react-native-dropdown-picker": "^4.0.9",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
+    "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "tsutils": "^3.21.0"
